@@ -99,6 +99,9 @@ Bug fixes
     methods, plus removal of IndexReader reference.
     (Naveen Belkale via Otis Gospodnetic)
 
+10. LUCENE-1046: Removed dead code in SpellChecker
+    (Daniel Naber via Otis Gospodnetic)
+
 New features
 
  1. LUCENE-1137: Added Token.set/getFlags() accessors for passing more information about a Token through the analysis
